# transactoid

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  20260210-135936-agent-skills-openai-gemini-filesystem-native.md  20260216-095534-relax-execute-shell-command-policy.md  AGENTS.local.md  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  Dockerfile  Makefile  README.md  REQUIREMENTS.txt  alembic.ini  fly.toml  main.py  mypy.ini  pyproject.toml  ruff.toml  script  test_reflexion_manual.py  transactoid-interfaces.md
backend/: .env.example  CONTEXT.md  pyproject.toml  ruff.toml
backend/.prompts/: _meta.json
backend/.prompts/agent-loop/: 1.md
backend/.prompts/categorize-transaction-agent/: 1.md  2.md
backend/.prompts/generate-memory-index/: 1.md
backend/.prompts/penny-system-prompt/: 10.md  11.md  12.md  2.md  5.md  6.md  8.md  9.md
backend/.prompts/report-annual/: 2.md
backend/.prompts/report-weekly/: 1.md
backend/.prompts/report-weekly-jenny/: 1.md  2.md  3.md
backend/.prompts/sql-directives-postgresql/: 1.md
backend/.prompts/sql-directives-sqlite/: 1.md
backend/.prompts/system/: 1.md
backend/alembic/: README.md  env.py
backend/app/: agent_factory.py  bridge.py  main.py
backend/configs/: taxonomy.yaml
backend/db/migrations/: 000_baseline_schema.py  001_add_transaction_items_and_split_columns.py  002_add_email_receipts_and_pending_receipt_matches.py  003_add_refund_columns_to_derived_transactions.py  004_add_account_sign_conventions.py  005_seed_account_sign_conventions.py  006_add_is_hidden_to_derived_transactions.py  006_add_merchant_metadata_columns.py  006_split_category_event_reason_columns.py  007_add_eval_store.py  007_add_original_descriptor_to_plaid_transactions.py  008_merge_heads_merge_divergent_migration_heads.py  009_add_plaid_raw_name_and_enrichment.py  010_add_households_and_users.py  011_revive_plaid_accounts.py  012_add_tenant_columns_nullable.py  013_backfill_tenant_columns.py  014_tenant_columns_not_null_and_fks.py  015_enable_rls_policies.py  016_add_household_id_to_categories.py  017_encrypt_plaid_access_tokens.py  018_add_workspace_store.py  019_add_conversation_tenancy.py  020_add_user_credentials.py  021_add_usage_events_and_user_billing.py  022_add_onboarding_items.py  023_add_queued_reminders.py  024_tenant_guc_wrapper.py  025_add_message_sender.py  025_tighten_web_conversation_tenancy.py  026_add_message_sender.py  027_eval_runs_allow_failed_status.py  027_tags_unique_per_household.py  028_add_eval_runs_household_id.py  README.md
backend/penny/: __init__.py  _logging.py  admin.py  agent_factory.py  bootstrap.py  cli.py  config.py  db.py  db_backfill.py  errors.py  households.py  llm.py  onboarding.py  prompts.py  reminders.py  sandbox.py  schema.py  signup.py  workspace.py
backend/penny/adapters/: clerk.py
backend/penny/api/: accumulator.py  auth.py  billing_routes.py  bridge.py  household_routes.py  hydration.py  main.py  mcp_server.py  sandbox_wiring.py  signup_routes.py
backend/penny/auth/: identity.py  jwt_verifier.py  settings.py
backend/penny/billing/: __init__.py  gate.py  metering.py  models.py  oauth.py  prices.py  reminders.py  session.py  usage_subscriber.py  vault.py
backend/penny/eval/: __init__.py  branch.py  fixture.py  job.py  metrics.py  replay.py  report.py  version.py
backend/penny/memory/: __init__.py
backend/penny/normalizer/: __init__.py  core.py  eval_fixtures.yaml  input.py  llm.py  merchant_normalizer.py  rules.py  rules.yaml
backend/penny/observability/: __init__.py  otel.py  sentry.py
backend/penny/rules/: __init__.py  loader.py
backend/penny/sandboxes/: chat.py  provider.py  reaper.py  relay.py  store.py
backend/penny/security/: __init__.py  sql_read_guard.py  token_cipher.py
backend/penny/services/: __init__.py  email.py  scheduled_reports.py
backend/penny/taxonomy/: core.py  generator.py  loader.py
backend/penny/tenancy/: context.py  principal.py
backend/penny/tools/: _base.py  _protocol.py  analytics.py  audit.py  bash.py  connect_provider.py  delivery.py  memory.py  onboarding.py  plaid.py  plaid_link.py  recategorize.py  registry.py  sign_conventions.py  sync.py  taxonomy.py  transactions.py
backend/penny/utils/: yaml.py
backend/penny/workspace_store/: __init__.py  blobs.py  broker.py  sync.py
backend/prompts/: report-monthly.md  report-weekly-jenny.md  report-weekly.md  system.md
backend/scripts/: backfill_sign_conventions.py  categorizer_review.py  inspect_venmo_plaid.py  neon_env.sh  new_test_branch.sh  normalize_dryrun.py  normalize_eval.py  pennydb  review.py  sample_descriptors.py  seed_sign_conventions.py  sync_taxonomy_from_supabase.py
backend/tests/: conftest.py  conftest_postgres.py  test_admin_import_workspace.py  test_bootstrap.py  test_cli.py  test_cron_context.py  test_deploy_segregation.py  test_domain_segregation.py  test_mcp_server.py  test_onboarding.py  test_plaid_link.py  test_prompt_reminder_guidance.py  test_prompt_rendering.py  test_reaper.py  test_reaper_sweep.py  test_relay.py  test_reminder_e2e.py  test_reminder_queue.py  test_schema_authority.py  test_schema_drift.py  test_signup.py  test_taxonomy_per_household.py
backend/tests/adapters/: test_clerk.py
backend/tests/api/: test_accumulator.py  test_auth_dependency.py  test_auth_e2e.py  test_bridge.py  test_chat_sets_context.py  test_chat_turn_context.py  test_continuity.py  test_conversation_list_route.py  test_conversation_scoping.py  test_conversation_store.py  test_household_members.py  test_hydration.py  test_invites.py  test_me.py  test_onboarding_wiring.py  test_persistence_models.py  test_sandbox_flag_gating.py  test_sandbox_resume.py  test_stream_persist.py
backend/tests/auth/: test_identity.py  test_jwt_verifier.py  test_settings.py
backend/tests/billing/: test_billing_api.py  test_billing_rls.py  test_connect_prompt.py  (+5 more)
lib/: pyproject.toml
lib/protocol/: __init__.py  events.py  turn.py
sandbox/: IMPLEMENTATION_LOG.md  pyproject.toml
sandbox/runner/: __init__.py  agent_assembly.py  server.py  turn_log.py
sandbox/tests/: test_codec.py  test_runner.py
(+885 files in other folders)
