[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transactoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "promptorium-python @ git+https://github.com/adambossy/promptorium-python@main",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
    "openai-agents>=0.5.1",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.17.2",
    "openai-chatkit>=1.4.1",
    "fastapi>=0.127.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
]

[project.scripts]
transactoid = "transactoid.ui.cli:main"

[tool.setuptools]
package-dir = {"transactoid" = "src/transactoid"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["transactoid*", "models", "evals*", "scripts"]

[tool.deadcode]
exclude = [
    ".venv/",
    "build/",
    "dist/",
    "**/site-packages/",
]
ignore-names = [
    "__all__",
    "__doc__",
    "__path__",
    "__version__",
    "_",
    "logger",
    "LOGGER",
    "*_fixture",
]
ignore-names-in-files = [
    "*/__init__.py",
    "tests/**",
    "test/**",
]
ignore-definitions = [
    "Migration",
    "*Migration",
]
ignore-definitions-if-inherits-from = [
    "BaseModel",
    "Schema",
    "Settings",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

