[project]
name = "penny-backend"
version = "0.1.0"
description = "Penny — runs an agent-harness Agent and streams it over the Vercel AI SDK UI message stream protocol."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "agent-harness[anthropic,openai,google,otel] @ git+https://github.com/adambossy/agent-harness.git@v0.2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.11",
    # libpg_query (Postgres's real parser) bindings — powers the read-only
    # SQL guard that gates the agent's run_sql tool (penny.security).
    "pglast>=6.0",
    "pyyaml>=6.0",
    "loguru>=0.7.3",
    "promptorium-python @ git+https://github.com/adambossy/promptorium-python@main",
    "matplotlib>=3.9",
    "boto3>=1.26",
    "stagehand>=0.5.9",
    "resend>=0.9",
    "alembic>=1.18.4",
    "typer>=0.12",
    # Fernet encryption of Plaid access tokens at rest (penny.security).
    "cryptography>=43.0",
    # RS256 + JWKS verification of Clerk-issued bearer tokens (penny.auth).
    "pyjwt[crypto]>=2.8",
    # Vendor-neutral OTEL tracing exported to Langfuse over OTLP (see
    # penny.observability). agent-harness[otel] provides the API+SDK used by
    # its OTELSubscriber; the exporter ships spans to Langfuse's OTLP endpoint.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # Langfuse SDK: used only to read the canonical trace id of the active OTEL
    # span (observability.current_trace_id) so eval deep links match the id
    # Langfuse stores the trace under. Spans still ship over OTLP, not the SDK.
    "langfuse>=4.12.0",
    # Sentry error tracking (penny.observability.sentry). Auto-instruments the
    # FastAPI app + Typer/cron entrypoints for unhandled-exception reporting.
    "sentry-sdk>=2.0",
    # Modal Sandboxes: the per-conversation runtime for the sandboxed agent loop.
    "modal>=1.5.1",
    # MCP server SDK: the tool server that exposes penny toolsets to the
    # sandboxed agent over streamable-HTTP MCP (agent-harness ships only the
    # MCP *client*; the server side is ours).
    "mcp>=1.0",
    # Shared backend↔sandbox wire protocol (lib/protocol): the envelope codec
    # the relay decodes and the TurnPayload the dispatcher encodes.
    "penny-lib",
]

[tool.uv.sources]
penny-lib = { workspace = true }
penny-sandbox = { workspace = true }

[project.scripts]
penny = "penny.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# agent-harness / promptorium-python are git ("direct reference") deps.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["penny"]

# agent-harness / promptorium-python are pinned as git deps in
# [project.dependencies], so the lockfile is portable and `uv sync --frozen`
# works identically in dev, CI, and prod. To hack on agent-harness locally,
# opt in per-machine WITHOUT editing the committed lock:
#     uv sync --frozen && uv pip install -e ~/code/agent-harness
# (re-run the editable install after any `uv sync`). See AGENTS.md "Dev loop".
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    # Dev-only: tests/test_relay.py drives the real sandbox runner in-process.
    # Never a runtime dep — prod images sync --no-dev, so the runner stays out
    # of the backend venv and the website→runner boundary holds by packaging.
    "penny-sandbox",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "postgres: requires a Postgres database (set POSTGRES_TEST_URL); skipped otherwise",
]
