[project]
name = "penny-lib"
version = "0.1.0"
description = "Shared packages imported by both the backend and the sandbox — currently the sandbox wire protocol (envelope codec + turn payload)."
requires-python = ">=3.13"
# Deliberately tiny and dependency-light so the backend↔sandbox seam stays
# thin: the codec round-trips agent-harness event dataclasses with pydantic.
dependencies = [
    "agent-harness @ git+https://github.com/adambossy/agent-harness.git@v0.2.0",
    "pydantic>=2",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
# agent-harness is a git ("direct reference") dep.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["protocol"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
